# graph-json

./: .gitignore  README.md  graph-json.md  pyproject.toml  tsconfig.cjs.json  tsconfig.json
.github/workflows/: ci.yml
graph_json/: __init__.py
java/: pom.xml
java/src/main/java/io/graphjson/: GraphJson.java
java/src/test/java/io/graphjson/: GraphJsonGoldenTest.java
python/: pyproject.toml
python/graph_json/: __init__.py
python/tests/: test_golden.py
ruby/: graph_json.rb  test.rb
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: golden.rs
src/: index.ts
test/: test.cjs  test.rb
tests/: golden.json  test_examples.py  test_golden.py
typescript/: package.json
typescript/src/: index.ts
typescript/test/: test.cjs
